--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="src/style.css" />
 
     <title>Responsive personal portofolio</title>
   </head>
   <body>
-    <header class="main-header">
-      <nav class="main-navigation">
-        <div><a href="#" class="nav-logo">Nadia Bouli</a></div>
-        <div class="nav-menu" id="nav-menu">
-          <ul class="nav-list">
-            <li class="li-nav"><a href="#" class="nav-link">Home</a></li>
-            <li class="li-nav"><a href="#" class="nav-link">About</a></li>
-            <li class="li-nav"><a href="#" class="nav-link">Skills</a></li>
-            <li class="li-nav"><a href="#" class="nav-link">Work</a></li>
-            <li class="li-nav"><a href="#" class="nav-link">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="src/java.js"></script>
   </body>
