added the second section and styled it in css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -64,15 +67,115 @@
 
     <main>
       <section>
-        <div class="container">
+        <div class="container-box">
           <div class="header">
-            <h3>Hi, i am </h3>
+            <h3>Hi, i am</h3>
             <h1 class="developer">Nadia Bouli</h1>
             <h2>Junior Front-End Developer, based in Germany</h2>
 
             <div class="header-buttons">
               <a href="#"><button class="main-button">Projects</button></a>
-              <a href="#"><button class="main-button" data-type="inverted">Resume</button></a>
+              <a href="#"
+                ><button class="main-button" data-type="inverted">
+                  Resume
+                </button></a
+              >
+            </div>
+          </div>
+          <h2 class="h2-subheader">•Take a look at my favorite Projects•</h2>
+          <hr />
+        </div>
+      </section>
+
+      <section>
+        <div class="container text-center">
+          <div class="row mb-5">
+            <div class="col">
+              <div class="background-image">
+                <img
+                  src="/src/images/project-files/weather-app.png"
+                  alt=" Weather-application-react"
+                  class="project-image"
+                />
+              </div>
+              <p class="project-description">
+                Utilizing HTML, CSS, React and API, i've created and designed a
+                weather app, which gives you the current weather details in a
+                user-friendly design. You can check forecasts effortlessly and
+                plan your day hassle-free with accurate information on
+                temperatures and weather changes! Down below You will find the
+                GitHub repository and the live demo of this project.
+              </p>
+              <div class="d-flex justify-content-center">
+                <a href=""><i class="bx bxl-github project-link"></i></a>
+                <a href=""> <i class="bx bxs-devices project-link"></i></a>
+              </div>
+            </div>
+            <div class="col">
+              <div class="background-image">
+                <img
+                  src="/src/images/project-files/Ai-app.png"
+                  alt=""
+                  class="project-image"
+                />
+              </div>
+              <p>
+                Presenting an AI book quote generator, which I developed with
+                HTML, CSS, JavaScript and API. This unique tool provides quotes
+                from a diverse range of books. In a user-friendly interface,
+                making it a delightful resource for book enthusiasts and seekers
+                of insightful words! Down below You will find the GitHub
+                repository and the live demo of this project.
+              </p>
+              <div class="d-flex justify-content-center">
+                <a href=""><i class="bx bxl-github project-link"></i></a>
+                <a href=""> <i class="bx bxs-devices project-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="row mb-2">
+            <div class="col">
+              <div class="background-image">
+                <img
+                  src="/src/images/project-files/dictionary-app.png"
+                  alt=""
+                  class="project-image"
+                />
+              </div>
+              <p>
+                The dictionary app is a user-friendly tool, that i developed
+                with HTML, CSS and React. It helps the users to look up
+                definitions of words. The interface is very user-friendly and
+                the app's responsive design ensures compatibility across various
+                devices! Down below You will find the GitHub repository and the
+                live demo of this project.
+              </p>
+              <div class="d-flex justify-content-center">
+                <a href=""><i class="bx bxl-github project-link"></i></a>
+                <a href=""> <i class="bx bxs-devices project-link"></i></a>
+              </div>
+            </div>
+            <div class="col">
+              <div class="background-image">
+                <img
+                  src="/src/images/project-files/world-clock-app.png"
+                  alt=""
+                  class="project-image"
+                />
+              </div>
+              <p>
+                The world clock app helps you view different time zones anywhere
+                in the world! I developed it, using HTML, CSS, JavaScript and
+                API. It You can effortlessly keep track of multiple location's
+                times, making it convenient for planning across various time
+                zones. Down below You will find the GitHub repository and the
+                live demo of this project.
+              </p>
+              <div class="d-flex justify-content-center">
+                <a href=""><i class="bx bxl-github project-link"></i></a>
+                <a href=""> <i class="bx bxs-devices project-link"></i></a>
+              </div>
             </div>
           </div>
         </div>
