added the links for my projects

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 GitHub repository and the live demo of this project.
               </p>
               <div class="d-flex justify-content-center">
-                <a href=""><i class="bx bxl-github project-link"></i></a>
-                <a href=""> <i class="bx bxs-devices project-link"></i></a>
+                <a href="https://github.com/NadiasCodes/react-forecast-application" target="_blank"><i class="bx bxl-github project-link"></i></a>
+                <a href="https://react-forecast-app.vercel.app/" target="_blank"> <i class="bx bxs-devices project-link"></i></a>
               </div>
             </div>
             <div class="col">
@@ -128,8 +128,8 @@
                 repository and the live demo of this project.
               </p>
               <div class="d-flex justify-content-center">
-                <a href=""><i class="bx bxl-github project-link"></i></a>
-                <a href=""> <i class="bx bxs-devices project-link"></i></a>
+                <a href="https://github.com/NadiasCodes/AI-Quote-Generator" target="_blank"><i class="bx bxl-github project-link"></i></a>
+                <a href="https://ai-quote-generator-pied.vercel.app/" target="_blank"> <i class="bx bxs-devices project-link"></i></a>
               </div>
             </div>
           </div>
@@ -152,15 +152,15 @@
                 live demo of this project.
               </p>
               <div class="d-flex justify-content-center">
-                <a href=""><i class="bx bxl-github project-link"></i></a>
-                <a href=""> <i class="bx bxs-devices project-link"></i></a>
+                <a href="https://github.com/NadiasCodes/dictionary-project" target="_blank"><i class="bx bxl-github project-link"></i></a>
+                <a href="https://dictionary-project-olive.vercel.app/" target="_blank"> <i class="bx bxs-devices project-link"></i></a>
               </div>
             </div>
             <div class="col">
               <div class="background-image">
                 <img
                   src="/src/images/project-files/world-clock-app.png"
-                  alt=""
+                  alt="world-clock-app"
                   class="project-image"
                 />
               </div>
@@ -173,8 +173,8 @@
                 live demo of this project.
               </p>
               <div class="d-flex justify-content-center">
-                <a href=""><i class="bx bxl-github project-link"></i></a>
-                <a href=""> <i class="bx bxs-devices project-link"></i></a>
+                <a href="https://github.com/NadiasCodes/World-Clock-Project" target="_blank"><i class="bx bxl-github project-link"></i></a>
+                <a href="https://world-clock-project-nine.vercel.app/index.html" target="_blank"> <i class="bx bxs-devices project-link"></i></a>
               </div>
             </div>
           </div>
