created and styled the footer

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                   class="project-image"
                 />
               </div>
-              <p class="project-description">
+              <p class="project-description" class="project-description">
                 Utilizing HTML, CSS, React and API, i've created and designed a
                 weather app, which gives you the current weather details in a
                 user-friendly design. You can check forecasts effortlessly and
@@ -107,8 +107,17 @@
                 GitHub repository and the live demo of this project.
               </p>
               <div class="d-flex justify-content-center">
-                <a href="https://github.com/NadiasCodes/react-forecast-application" target="_blank"><i class="bx bxl-github project-link"></i></a>
-                <a href="https://react-forecast-app.vercel.app/" target="_blank"> <i class="bx bxs-devices project-link"></i></a>
+                <a
+                  href="https://github.com/NadiasCodes/react-forecast-application"
+                  target="_blank"
+                  ><i class="bx bxl-github project-link"></i
+                ></a>
+                <a
+                  href="https://react-forecast-app.vercel.app/"
+                  target="_blank"
+                >
+                  <i class="bx bxs-devices project-link"></i
+                ></a>
               </div>
             </div>
             <div class="col">
@@ -119,7 +128,7 @@
                   class="project-image"
                 />
               </div>
-              <p>
+              <p class="project-description">
                 Presenting an AI book quote generator, which I developed with
                 HTML, CSS, JavaScript and API. This unique tool provides quotes
                 from a diverse range of books. In a user-friendly interface,
@@ -128,8 +137,17 @@
                 repository and the live demo of this project.
               </p>
               <div class="d-flex justify-content-center">
-                <a href="https://github.com/NadiasCodes/AI-Quote-Generator" target="_blank"><i class="bx bxl-github project-link"></i></a>
-                <a href="https://ai-quote-generator-pied.vercel.app/" target="_blank"> <i class="bx bxs-devices project-link"></i></a>
+                <a
+                  href="https://github.com/NadiasCodes/AI-Quote-Generator"
+                  target="_blank"
+                  ><i class="bx bxl-github project-link"></i
+                ></a>
+                <a
+                  href="https://ai-quote-generator-pied.vercel.app/"
+                  target="_blank"
+                >
+                  <i class="bx bxs-devices project-link"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -143,7 +161,7 @@
                   class="project-image"
                 />
               </div>
-              <p>
+              <p class="project-description">
                 The dictionary app is a user-friendly tool, that i developed
                 with HTML, CSS and React. It helps the users to look up
                 definitions of words. The interface is very user-friendly and
@@ -152,8 +170,17 @@
                 live demo of this project.
               </p>
               <div class="d-flex justify-content-center">
-                <a href="https://github.com/NadiasCodes/dictionary-project" target="_blank"><i class="bx bxl-github project-link"></i></a>
-                <a href="https://dictionary-project-olive.vercel.app/" target="_blank"> <i class="bx bxs-devices project-link"></i></a>
+                <a
+                  href="https://github.com/NadiasCodes/dictionary-project"
+                  target="_blank"
+                  ><i class="bx bxl-github project-link"></i
+                ></a>
+                <a
+                  href="https://dictionary-project-olive.vercel.app/"
+                  target="_blank"
+                >
+                  <i class="bx bxs-devices project-link"></i
+                ></a>
               </div>
             </div>
             <div class="col">
@@ -164,7 +191,7 @@
                   class="project-image"
                 />
               </div>
-              <p>
+              <p class="project-description">
                 The world clock app helps you view different time zones anywhere
                 in the world! I developed it, using HTML, CSS, JavaScript and
                 API. It You can effortlessly keep track of multiple location's
@@ -173,14 +200,40 @@
                 live demo of this project.
               </p>
               <div class="d-flex justify-content-center">
-                <a href="https://github.com/NadiasCodes/World-Clock-Project" target="_blank"><i class="bx bxl-github project-link"></i></a>
-                <a href="https://world-clock-project-nine.vercel.app/index.html" target="_blank"> <i class="bx bxs-devices project-link"></i></a>
+                <a
+                  href="https://github.com/NadiasCodes/World-Clock-Project"
+                  target="_blank"
+                  ><i class="bx bxl-github project-link"></i
+                ></a>
+                <a
+                  href="https://world-clock-project-nine.vercel.app/index.html"
+                  target="_blank"
+                >
+                  <i class="bx bxs-devices project-link"></i
+                ></a>
               </div>
             </div>
           </div>
         </div>
       </section>
     </main>
+    <footer>
+      <div class="container-box">
+        <div class="d-flex justify-content-center">
+          <a href="https://github.com/NadiasCodes" target="_blank"
+            ><i class="bx bxl-github social-links"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/nadia-bouli/" target="_blank"
+            ><i class="bx bxl-linkedin social-links"></i
+          ></a>
+          <a href=""><i class="bx bxs-file-pdf social-links"></i></a>
+        </div>
+      </div>
+
+      <a href="mailto:De.Nadia@outlook.com"
+        ><h4 class="email">De.Nadia@outlook.com</h4></a
+      >
+    </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="src/java.js"></script>
