--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
   </head>
   <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Nadia Bouli</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -53,10 +53,10 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <div class="navbar-nav ">
+            <a class="nav-link active" aria-current="page" href="./">Home</a>
             <a class="nav-link" href="#">About</a>
-            <a class="nav-link" href="#">Pojects</a>
+            <a class="nav-link" href="#">Projects</a>
             <a class="nav-link" href="#">Contact</a>
           </div>
         </div>
@@ -86,7 +86,7 @@
           <hr />
         </div>
       </section>
-
+      <!-- Secondary Section -->
       <section>
         <div class="container text-center">
           <div class="row mb-5">
@@ -98,7 +98,7 @@
                   class="project-image"
                 />
               </div>
-              <p class="project-description" class="project-description">
+              <p class="project-description">
                 Utilizing HTML, CSS, React and API, i've created and designed a
                 weather app, which gives you the current weather details in a
                 user-friendly design. You can check forecasts effortlessly and
@@ -217,16 +217,27 @@
         </div>
       </section>
     </main>
+
+    <!-- Footer -->
+
     <footer>
       <div class="container-box">
         <div class="d-flex justify-content-center">
-          <a href="https://github.com/NadiasCodes" target="_blank"
+          <a
+            href="https://github.com/NadiasCodes"
+            target="_blank"
+            title="Github Profile"
             ><i class="bx bxl-github social-links"></i
           ></a>
-          <a href="https://www.linkedin.com/in/nadia-bouli/" target="_blank"
+          <a
+            href="https://www.linkedin.com/in/nadia-bouli/"
+            target="_blank"
+            title="Linkedin"
             ><i class="bx bxl-linkedin social-links"></i
           ></a>
-          <a href=""><i class="bx bxs-file-pdf social-links"></i></a>
+          <a href="" target="_blank" title="Resume"
+            ><i class="bx bxs-file-pdf social-links"></i
+          ></a>
         </div>
       </div>
 
