--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ">
             <a class="nav-link active" aria-current="page" href="./">Home</a>
-            <a class="nav-link" href="#">About</a>
-            <a class="nav-link" href="#">Projects</a>
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="./about.html">About</a>
+            <a class="nav-link" href="./projects.html">Projects</a>
+            <a class="nav-link" href="./Contact.html">Contact</a>
           </div>
         </div>
       </div>
@@ -74,7 +74,7 @@
             <h2>Junior Front-End Developer, based in Germany</h2>
 
             <div class="header-buttons">
-              <a href="#"><button class="main-button">Projects</button></a>
+              <a href="./projects.html"><button class="main-button">Projects</button></a>
               <a href="#"
                 ><button class="main-button" data-type="inverted">
                   Resume
