added section 3 with all achievements and styled it in css

--- a/about.html
+++ b/about.html
@@ -67,13 +67,12 @@
     <main>
       <section class="container-box">
         <div class="container">
-          <h2 class="mt-3 about-me text-center">About Me:</h2>
+          <h2 class="mt-3 header text-center">About Me:</h2>
           <div class="row">
             <div class="col-lg-6">
               <div class="main-content">
-                
                 <h1 class="mb-3 title">Hi, i am Nadia Bouli</h1>
-                <h2 class="mb-3 front-end" >Junior Front-End developer</h2>
+                <h2 class="mb-3 front-end">Junior Front-End developer</h2>
                 <p class="mb-4 details-paragraph">
                   Enthusiastic & dedicated junior front-end developer with a
                   strong foundation in HTML, CSS, JavaScript, and ReactJS. Eager
@@ -86,8 +85,8 @@
                   In my free time, aside from coding(yes, this happens
                   sometimes), i love going for walks, exercising, watching
                   series, reading books & playing video games. I am a plant
-                  enthusiast, i just love having as many plants as i am allowed
-                  to have 😅
+                  enthusiast, i love having as many plants as i am allowed to
+                  have. 😅
                 </p>
                 <a href="#" class="main-button">View my projects</a>
               </div>
@@ -105,9 +104,267 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
       </section>
     </main>
 
-    <!-- Secondary Section -->
+    <!-- Second section - Skills -->
+    <main>
+      <section class="container-box container text-center">
+        <h2 class="header text-center">Skills:</h2>
+        <div class="row mt-5">
+          <div class="col-lg-3 mb-4">
+            <i class="bx bxl-html5 icon-skill"></i>
+            <p class="icon-skill-text">Html</p>
+          </div>
+          <div class="col-lg-3 mb-4">
+            <i class="bx bxl-css3 icon-skill"></i>
+            <p class="icon-skill-text">Css3</p>
+          </div>
+          <div class="col-lg-3 mb-4">
+            <i class="bx bxl-javascript icon-skill"></i>
+            <p class="icon-skill-text">JavaScript</p>
+          </div>
+          <div class="col-lg-3 mb-4">
+            <i class="bx bxl-react icon-skill"></i>
+            <p class="icon-skill-text">React</p>
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-lg-3 mb-4">
+            <i class="bx bxs-invader icon-skill"></i>
+            <p class="icon-skill-text">AI</p>
+          </div>
+          <div class="col-lg-3 mb-4">
+            <i class="bx bx-devices icon-skill"></i>
+            <p class="icon-skill-text">Responsive</p>
+          </div>
+          <div class="col-lg-3 mb-4">
+            <i class="bx bx-network-chart icon-skill"></i>
+            <p class="icon-skill-text">API's</p>
+          </div>
+          <div class="col-lg-3 mb-4">
+            <i class="bx bxl-github icon-skill"></i>
+            <p class="icon-skill-text">GitHub</p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- Third section - Achievements -->
+    <main>
+      <h2 class="header text-center">Achievements:</h2>
+      <section class="container-box">
+        <div class="achievements">
+          <div class="details">
+            <h3 class="mb-4 title-achiev">SheCodes Basics</h3>
+            <p class="achiev-text">
+              SheCodes Basics is the perfect first dive into front-end
+              development. It teaches you how to build a page in HTML, how to
+              style your page and target specific elements in CSS and how to
+              animate it with JavaScript. By the end of this workshop, it equips
+              you with skills in order to build a simple interactive landing
+              page.
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="./src/images/certificates/Introduction to Coding.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="achievements">
+          <div class="details">
+            <h3 class="mb-4 title-achiev">SheCodes Basics Add-on</h3>
+            <p class="achiev-text">
+              SheCodes Basics Add-on continues your introduction to front-end
+              development and development tools. It teaches new techniques in
+              HTML, CSS and JavaScript to build on the knowledge based in
+              SheCodes Basic.
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="./src/images/certificates/Introduction to web development.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="achievements">
+          <div class="details">
+            <h3 class="mb-4 title-achiev">SheCodes Plus</h3>
+            <p class="achiev-text">
+              SheCodes Plus is ideal for those looking to transition to a career
+              in tech or advance in their current career. It teaches advanced
+              page animation techniques with JavaScript functions, how to
+              integrate APIs into your code to fetch real data and how to use
+              code management tools that professionals use. This workshop could
+              be especially helpful for Product/Project managers, UX/UI
+              designers, Customer support, and QA testers to name a few.
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <img src="./src/images/certificates/Web Development.png" alt="" />
+          </div>
+        </div>
+        <div class="achievements">
+          <div class="details">
+            <h3 class="mb-4 title-achiev">SheCodes Plus Add-on</h3>
+            <p class="achiev-text">
+              SheCodes Plus Add-on teaches you the potential of advanced
+              Javascript, allowing you to build more sophisticated interactions
+              and features into your projects. This add-on is ideal for SheCodes
+              Plus graduates who would like to build on the Javascript skills
+              they already learned in Plus.
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="./src/images/certificates/Advanced web development.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="achievements">
+          <div class="details">
+            <h3 class="mb-4 title-achiev">SheCodes AI Add-on</h3>
+            <p class="achiev-text">
+              SheCodes AI Add-on will show you the potential of Artificial
+              Intelligence and how to build a text-generating tool powered by
+              AI. You’ll build on your HTML, CSS and JavaScript knowledge and
+              learn to use an AI API in your code. This add-on is great for
+              anyone looking to learn how to turn AI into a cool feature that
+              users will love. It’s especially relevant for tech professionals
+              working with AI-powered products or tools, and any aspiring
+              developer!
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <img src="./src/images/certificates/AI Add-On-png.png" alt="" />
+          </div>
+        </div>
+        <div class="achievements">
+          <div class="details">
+            <h3 class="mb-4 title-achiev">SheCodes Responsive</h3>
+            <p class="achiev-text">
+              SheCodes Responsive is ideal for those looking to become
+              professional developers. It teaches you how to make your code
+              responsive to any device and how to build a multi-page website.
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <img src="./src/images/certificates/responsive.png" alt="" />
+          </div>
+        </div>
+        <div class="achievements">
+          <div class="details">
+            <h3 class="mb-4 title-achiev">SheCodes Responsive Add-on</h3>
+            <p class="achiev-text">
+              SheCodes Responsive Add-on is ideal for anyone looking to build on
+              the coding knowledge learned with Responsive. Get creative with
+              your coding skills and add more sophistication to your responsive
+              design using more advanced CSS techniques.
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="./src/images/certificates/Advanced responsive web development.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="achievements">
+          <div class="details">
+            <h3 class="mb-4 title-achiev">SheCodes React</h3>
+            <p class="achiev-text">
+              SheCodes React is ideal for those looking to become professional
+              developers. You’ll become familiar with the high-in-demand React
+              framework.
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <img src="./src/images/certificates/React.png" alt="" />
+          </div>
+        </div>
+        <div class="achievements">
+          <div class="details">
+            <h3 class="mb-4 title-achiev">SheCodes React Add-on</h3>
+            <p class="achiev-text">
+              SheCodes React Add-on is a great choice for React graduates who
+              want to build more advanced knowledge after the workshop. It’s
+              ideal for anyone who would like to work towards becoming a
+              professional developer and gain more advanced knowledge of one of
+              the most in-demand coding frameworks today.
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <img src="./src/images/certificates/React-Add-On.png" alt="" />
+          </div>
+        </div>
+        <div class="achievements">
+          <div class="details">
+            <h3 class="mb-4 title-achiev">Graduation</h3>
+            <p class="achiev-text">
+              This experience was amazing. I loved the entire journey with all
+              the workshops, the challenges, the homeworks, the amazing projects
+              and now I am gonna keep coding and learning even more 🤍
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="./src/images/certificates/front-end-developerpng.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="achievements">
+          <div class="details">
+            <h3 class="mb-4 title-achiev">
+              Learn ReactJS by Building 5 Projects
+            </h3>
+            <h4 class="mb-3">- In progress, still not completed -</h4>
+
+            <p class="achiev-text">
+              This is the perfect course to learn ReactJS if you are a beginner.
+              Most programmers agree that the best way to learn a language or a
+              technology is to build something. Therefore this course will teach
+              you guys everything you would need to know in order to build your
+              own awesome website.
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <img src="./src/images/certificates/codedamn-react .png" alt="" />
+          </div>
+        </div>
+         <h2 class="header text-center">Forever Learning</h2>
+      </section>
+    </main>
 
     <!-- Footer -->
+    <footer>
+      <div class="container-box">
+        <div class="d-flex justify-content-center">
+          <a
+            href="https://github.com/NadiasCodes"
+            target="_blank"
+            title="Github Profile"
+            ><i class="bx bxl-github social-links"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/nadia-bouli/"
+            target="_blank"
+            title="Linkedin"
+            ><i class="bx bxl-linkedin social-links"></i
+          ></a>
+          <a href="" target="_blank" title="Resume"
+            ><i class="bx bxs-file-pdf social-links"></i
+          ></a>
+        </div>
+      </div>
+
+      <a href="mailto:De.Nadia@outlook.com"
+        ><h4 class="email">De.Nadia@outlook.com</h4></a
+      >
+    </footer>
+
+    <!-- Java -->
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="src/java.js"></script>
