--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ">
+          <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="./">Home</a>
             <a class="nav-link" href="./about.html">About</a>
             <a class="nav-link" href="./projects.html">Projects</a>
@@ -74,7 +74,9 @@
             <h2>Junior Front-End Developer, based in Germany</h2>
 
             <div class="header-buttons">
-              <a href="./projects.html"><button class="main-button">Projects</button></a>
+              <a href="./projects.html"
+                ><button class="main-button">Projects</button></a
+              >
               <a href="#"
                 ><button class="main-button" data-type="inverted">
                   Resume
