--- a/about.html
+++ b/about.html
@@ -65,9 +65,10 @@
 
     <!-- Main Section -->
     <main>
+       
       <section class="container-box">
+       <h2 class="header">About Me:</h2>
         <div class="container">
-          <h2 class="mt-3 header text-center">About Me:</h2>
           <div class="row">
             <div class="col-lg-6">
               <div class="main-content">
@@ -91,11 +92,11 @@
                 <a href="#" class="main-button">View my projects</a>
               </div>
             </div>
-            <div class="col-lg-6 photo-content">
+            <div class="col-lg-6 d-none d-md-block photo-content">
               <img
                 src="
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/original/Untitled_design.png?1703842530"
-                class="img-fluid rounded"
+                class="img-fluid rounded profile"
                 alt=""
               />
             </div>
@@ -163,7 +164,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
               page.
             </p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 d-none d-lg-block">
             <img
               src="./src/images/certificates/Introduction to Coding.png"
               alt=""
@@ -180,7 +181,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
               SheCodes Basic.
             </p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 d-none d-lg-block">
             <img
               src="./src/images/certificates/Introduction to web development.png"
               alt=""
@@ -200,7 +201,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
               designers, Customer support, and QA testers to name a few.
             </p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 d-none d-lg-block">
             <img src="./src/images/certificates/Web Development.png" alt="" />
           </div>
         </div>
@@ -215,7 +216,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
               they already learned in Plus.
             </p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 d-none d-lg-block">
             <img
               src="./src/images/certificates/Advanced web development.png"
               alt=""
@@ -236,7 +237,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
               developer!
             </p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 d-none d-lg-block">
             <img src="./src/images/certificates/AI Add-On-png.png" alt="" />
           </div>
         </div>
@@ -249,7 +250,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
               responsive to any device and how to build a multi-page website.
             </p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 d-none d-lg-block">
             <img src="./src/images/certificates/responsive.png" alt="" />
           </div>
         </div>
@@ -263,7 +264,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
               design using more advanced CSS techniques.
             </p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 d-none d-lg-block">
             <img
               src="./src/images/certificates/Advanced responsive web development.jpg"
               alt=""
@@ -279,7 +280,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
               framework.
             </p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 d-none d-lg-block">
             <img src="./src/images/certificates/React.png" alt="" />
           </div>
         </div>
@@ -294,7 +295,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
               the most in-demand coding frameworks today.
             </p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 d-none d-lg-block">
             <img src="./src/images/certificates/React-Add-On.png" alt="" />
           </div>
         </div>
@@ -307,7 +308,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
               and now I am gonna keep coding and learning even more 🤍
             </p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-6 d-none d-lg-block">
             <img
               src="./src/images/certificates/front-end-developerpng.png"
               alt=""
@@ -329,11 +330,11 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
               own awesome website.
             </p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 d-none d-lg-block">
             <img src="./src/images/certificates/codedamn-react .png" alt="" />
           </div>
         </div>
-         <h2 class="header text-center">Forever Learning</h2>
+        <h2 class="header text-center">Forever Learning</h2>
       </section>
     </main>
 
