--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
       <section>
         <div class="container text-center">
           <div class="row mb-5">
-            <div class="col">
+            <div class="col-lg-6 col-sm-12 ">
               <div class="background-image">
                 <img
                   src="/src/images/project-files/weather-application.png"
                   alt=" Weather-application-react"
-                  class="project-image"
+                  class="project-image d-none d-lg-block"
                 />
               </div>
               <p class="project-description">
@@ -122,12 +122,12 @@
                 ></a>
               </div>
             </div>
-            <div class="col">
+            <div class="col-lg-6 col-sm-12">
               <div class="background-image">
                 <img
                   src="/src/images/project-files/quote-generator.png"
                   alt=""
-                  class="project-image"
+                  class="project-image d-none d-lg-block"
                 />
               </div>
               <p class="project-description">
@@ -155,12 +155,12 @@
           </div>
 
           <div class="row mb-2">
-            <div class="col">
+            <div class="col-lg-6 col-sm-12">
               <div class="background-image">
                 <img
-                  src="/src/images/project-files/dictionary-app.png"
+                  src="/src/images/project-files/dictionary-app.png "
                   alt=""
-                  class="project-image"
+                  class="project-image d-none d-lg-block"
                 />
               </div>
               <p class="project-description">
@@ -185,12 +185,12 @@
                 ></a>
               </div>
             </div>
-            <div class="col">
+            <div class="col-lg-6 col-sm-12">
               <div class="background-image">
                 <img
                   src="/src/images/project-files/world-clock-app.png"
                   alt="world-clock-app"
-                  class="project-image"
+                  class="project-image d-none d-lg-block"
                 />
               </div>
               <p class="project-description">
