adjustments, correcting typos, grammar and styling

--- a/about.html
+++ b/about.html
@@ -65,14 +65,13 @@
 
     <!-- Main Section -->
     <main>
-       
       <section class="container-box">
-       <h2 class="header">About Me:</h2>
+        <h2 class="header">About Me:</h2>
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
               <div class="main-content">
-                <h1 class="mb-3 title">Hi, i am Nadia Bouli</h1>
+                <h1 class="mb-4 title">Hi, i am Nadia</h1>
                 <h2 class="mb-3 front-end">Junior Front-End developer</h2>
                 <p class="mb-4 details-paragraph">
                   Enthusiastic & dedicated junior front-end developer with a
@@ -83,11 +82,12 @@
                   and improving.
                   <br />
                   <br />
-                  In my free time, aside from coding(yes, this happens
-                  sometimes), i love going for walks, exercising, watching
-                  series, reading books & playing video games. I am a plant
-                  enthusiast, i love having as many plants as i am allowed to
-                  have. 😅
+                  I mainly like to pursue personal coding projects in my free
+                  time. With whatever time is left (often not much) i love going
+                  for walks, exercising, watching series, reading books &
+                  playing video games. Lastly, I have a deep love for plants.
+                  It's not just a hobby; it's a joyful commitment and
+                  dedication.
                 </p>
                 <a href="#" class="main-button">View my projects</a>
               </div>
@@ -303,9 +303,11 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
           <div class="details">
             <h3 class="mb-4 title-achiev">Graduation</h3>
             <p class="achiev-text">
-              This experience was amazing. I loved the entire journey with all
-              the workshops, the challenges, the homeworks, the amazing projects
-              and now I am gonna keep coding and learning even more 🤍
+              Completing my coding bootcamp was a truly exhilarating journey,
+              one that fueled my passion for web development and ignited my
+              enthusiasm for the possibilities that lie ahead. Earning my
+              certificate of graduation was a significant milestone, symbolizing
+              my hard work, dedication, and countless hours of learning.🤍
             </p>
           </div>
           <div class="col-6 d-none d-lg-block">
