--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="src/index.css" />
 
     <title>Responsive personal portofolio</title>
   </head>
@@ -40,7 +40,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Nadia Bouli</a>
+        <a class="navbar-brand" href="./">Nadia Bouli</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -85,6 +85,10 @@
             </div>
           </div>
           <h2 class="h2-subheader">•Take a look at my favorite Projects•</h2>
+          <h5 class="text-center mt-3">
+            Links available for GitHub repository and a live demo of each
+            project.
+          </h5>
           <hr />
         </div>
       </section>
@@ -92,7 +96,7 @@
       <section>
         <div class="container text-center">
           <div class="row mb-5">
-            <div class="col-lg-6 col-sm-12 ">
+            <div class="col-lg-6 col-sm-12">
               <div class="background-image">
                 <img
                   src="/src/images/project-files/weather-application.png"
@@ -105,8 +109,7 @@
                 weather app, which gives you the current weather details in a
                 user-friendly design. You can check forecasts effortlessly and
                 plan your day hassle-free with accurate information on
-                temperatures and weather changes! Down below You will find the
-                GitHub repository and the live demo of this project.
+                temperatures and weather changes!
               </p>
               <div class="d-flex justify-content-center">
                 <a
@@ -131,12 +134,11 @@
                 />
               </div>
               <p class="project-description">
-                Presenting an AI book quote generator, which I developed with
-                HTML, CSS, JavaScript and API. This unique tool provides quotes
-                from a diverse range of books. In a user-friendly interface,
-                making it a delightful resource for book enthusiasts and seekers
-                of insightful words! Down below You will find the GitHub
-                repository and the live demo of this project.
+                The AI book quote generator, is an application which I developed
+                with HTML, CSS, JavaScript and API. This unique tool provides
+                quotes from a diverse range of books. In a user-friendly
+                interface, making it a delightful resource for book enthusiasts
+                and seekers of insightful words!
               </p>
               <div class="d-flex justify-content-center">
                 <a
@@ -168,8 +170,7 @@
                 with HTML, CSS and React. It helps the users to look up
                 definitions of words. The interface is very user-friendly and
                 the app's responsive design ensures compatibility across various
-                devices! Down below You will find the GitHub repository and the
-                live demo of this project.
+                devices!
               </p>
               <div class="d-flex justify-content-center">
                 <a
@@ -198,8 +199,7 @@
                 in the world! I developed it, using HTML, CSS, JavaScript and
                 API. It You can effortlessly keep track of multiple location's
                 times, making it convenient for planning across various time
-                zones. Down below You will find the GitHub repository and the
-                live demo of this project.
+                zones.
               </p>
               <div class="d-flex justify-content-center">
                 <a
