changed the aesthetic of the entire project. I am using a more minimalist and clean approach

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="./">Home</a>
+            <a class="nav-link" aria-current="page" href="./">Home</a>
             <a class="nav-link" href="./about.html">About</a>
             <a class="nav-link" href="./projects.html">Projects</a>
             <a class="nav-link" href="./Contact.html">Contact</a>
@@ -89,7 +89,7 @@
                   It's not just a hobby; it's a joyful commitment and
                   dedication.
                 </p>
-                <a href="#" class="main-button">View my projects</a>
+                <a href="./projects.html" class="main-button">View my projects</a>
               </div>
             </div>
             <div class="col-lg-6 d-none d-md-block photo-content">
@@ -166,8 +166,8 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
           </div>
           <div class="col-lg-6 d-none d-lg-block">
             <img
-              src="./src/images/certificates/Introduction to Coding.png"
-              alt=""
+              src="./src/images/certificates/Introduction to Coding.png" class="certificate-image"
+              alt="shecodes basics"
             />
           </div>
         </div>
@@ -183,8 +183,8 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
           </div>
           <div class="col-lg-6 d-none d-lg-block">
             <img
-              src="./src/images/certificates/Introduction to web development.png"
-              alt=""
+              src="./src/images/certificates/Introduction to web development.png" class="certificate-image"
+              alt="SheCodes Basics Add-on"
             />
           </div>
         </div>
@@ -202,7 +202,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
             </p>
           </div>
           <div class="col-lg-6 d-none d-lg-block">
-            <img src="./src/images/certificates/Web Development.png" alt="" />
+            <img src="./src/images/certificates/Web Development.png" class="certificate-image" alt="SheCodes Plus" />
           </div>
         </div>
         <div class="achievements">
@@ -218,8 +218,8 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
           </div>
           <div class="col-lg-6 d-none d-lg-block">
             <img
-              src="./src/images/certificates/Advanced web development.png"
-              alt=""
+              src="./src/images/certificates/Advanced web development.png" class="certificate-image"
+              alt="SheCodes Plus Add-on"
             />
           </div>
         </div>
@@ -238,7 +238,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
             </p>
           </div>
           <div class="col-lg-6 d-none d-lg-block">
-            <img src="./src/images/certificates/AI Add-On-png.png" alt="" />
+            <img src="./src/images/certificates/AI Add-On-png.png" class="certificate-image" alt="SheCodes AI Add-on" />
           </div>
         </div>
         <div class="achievements">
@@ -251,7 +251,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
             </p>
           </div>
           <div class="col-lg-6 d-none d-lg-block">
-            <img src="./src/images/certificates/responsive.png" alt="" />
+            <img src="./src/images/certificates/responsive.png" class="certificate-image" alt="SheCodes Responsive" />
           </div>
         </div>
         <div class="achievements">
@@ -266,8 +266,8 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
           </div>
           <div class="col-lg-6 d-none d-lg-block">
             <img
-              src="./src/images/certificates/Advanced responsive web development.jpg"
-              alt=""
+              src="./src/images/certificates/Advanced responsive web development.jpg" class="certificate-image"
+              alt="SheCodes Responsive Add-on"
             />
           </div>
         </div>
@@ -281,7 +281,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
             </p>
           </div>
           <div class="col-lg-6 d-none d-lg-block">
-            <img src="./src/images/certificates/React.png" alt="" />
+            <img src="./src/images/certificates/React.png" class="certificate-image" alt="SheCodes React" />
           </div>
         </div>
         <div class="achievements">
@@ -296,7 +296,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
             </p>
           </div>
           <div class="col-lg-6 d-none d-lg-block">
-            <img src="./src/images/certificates/React-Add-On.png" alt="" />
+            <img src="./src/images/certificates/React-Add-On.png"  class="certificate-image" alt="SheCodes React Add-on" />
           </div>
         </div>
         <div class="achievements">
@@ -312,8 +312,8 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
           </div>
           <div class="col-6 d-none d-lg-block">
             <img
-              src="./src/images/certificates/front-end-developerpng.png"
-              alt=""
+              src="./src/images/certificates/front-end-developerpng.png" class="certificate-image"
+              alt="Graduation"
             />
           </div>
         </div>
@@ -333,7 +333,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/origina
             </p>
           </div>
           <div class="col-lg-6 d-none d-lg-block">
-            <img src="./src/images/certificates/codedamn-react .png" alt="" />
+            <img src="./src/images/certificates/codedamn-react .png" class="certificate-image" alt="Learn ReactJS" />
           </div>
         </div>
         <h2 class="header text-center">Forever Learning</h2>
