--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -54,7 +55,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="./">Home</a>
+            <a class="nav-link" aria-current="page" href="./">Home</a>
             <a class="nav-link" href="./about.html">About</a>
             <a class="nav-link" href="./projects.html">Projects</a>
             <a class="nav-link" href="./Contact.html">Contact</a>
@@ -247,6 +248,8 @@
         ><h4 class="email">De.Nadia@outlook.com</h4></a
       >
     </footer>
+
+    <!-- JavaScript -->
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="src/java.js"></script>
